data/derived/comb/progs/unify/prog3788.ml.out
Characters 114-134:
  | true  -> digitsOfInt (n / 10) :: digitsOfInt (n mod 10);;
             ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
